# cockpit-tools

./: .gitignore  CHANGELOG.md  CHANGELOG.zh-CN.md  Cargo.toml  README.en.md  README.md  README.pt-br.md  announcements.json  index.html  missing.json  missing_utf8.json  package-lock.json  package.json
.github/workflows/: build-matrix.yml  platform-packages.yml  release.yml
Casks/: cockpit-tools.rb
crates/: adapter-windows-common-controls-build.rs  windows-common-controls-v6.rc
crates/cockpit-antigravity-adapter/: Cargo.toml
crates/cockpit-antigravity-ide-adapter/: Cargo.toml
crates/cockpit-claude-adapter/: Cargo.toml
crates/cockpit-codebuddy-adapter/: Cargo.toml
crates/cockpit-codebuddy-cn-adapter/: Cargo.toml  build.rs
crates/cockpit-codex-adapter/: Cargo.toml
crates/cockpit-cursor-adapter/: Cargo.toml
crates/cockpit-gemini-adapter/: Cargo.toml
crates/cockpit-github-copilot-adapter/: Cargo.toml
crates/cockpit-kiro-adapter/: Cargo.toml
crates/cockpit-qoder-adapter/: Cargo.toml
crates/cockpit-trae-adapter/: Cargo.toml
crates/cockpit-windsurf-adapter/: Cargo.toml
crates/cockpit-workbuddy-adapter/: Cargo.toml
crates/cockpit-zed-adapter/: Cargo.toml
docs/: business-logic-sync-v0.26.5-to-v1.0.3.md  false-positive-template.md  platform-hot-update-architecture.md  platform-integration-guide.md  release-process.md  release-template.md
platform-packages/: index.json
platform-packages/codex/: manifest.json
platform-packages/history/: antigravity.json  antigravity_ide.json  claude_manager.json  codebuddy.json  codebuddy_cn.json  codex.json  cursor.json  gemini.json  github-copilot.json  kiro.json  qoder.json  trae.json  windsurf.json  workbuddy.json  zed.json
scripts/: package-platform-package.cjs  platform-dev-serve.cjs  platform-ui-dev.cjs  prepare-platform-bootstrap.cjs  prepare-test-channel-version.cjs  tauri-dev.cjs  tauri-dist-dev.cjs  tauri-test-local.cjs  tauri-test-ui.cjs  verify-platform-packages.cjs
scripts/release/: build_merged_latest_json.cjs  gen_checksums.cjs  preflight.cjs
sidecars/cockpit-cliproxy/: go.mod  go.sum  main.go  main_test.go
src/: App.tsx  main.tsx  webBridge.ts
src-tauri/: Cargo.toml  tauri.conf.json  tauri.gray.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs
src/components/: AccountGroupModal.tsx  AccountSelectionToolbar.tsx  AnnouncementCenter.css  AnnouncementCenter.tsx  CloseConfirmDialog.css  CloseConfirmDialog.tsx  CodexAccountGroupModal.tsx  CodexGroupAccountPickerModal.tsx  CodexLocalAccessModal.css  CodexLocalAccessModal.tsx  ExportJsonModal.tsx  FileCorruptedModal.tsx  GlobalModal.tsx  GroupAccountPickerModal.tsx  GroupSettingsModal.tsx  InstancesManager.tsx  LogViewerModal.tsx  OverviewTabsHeader.tsx  PlatformLayoutModal.tsx  PlatformPackageToolbar.css  PlatformPackageToolbar.tsx  PlatformPackageUnavailablePage.tsx  QuickSettingsPopover.css  QuickSettingsPopover.tsx  SettingsAccountTransferSection.tsx  SettingsWebdavSyncSection.tsx  TagEditModal.tsx  TopCenterPromoBanner.tsx  (+2 more)
(+207 files in other folders)
