# 体积优化：让所有依赖按体积编译并做跨 crate 裁剪，platform-package adapter 二进制收益最大。
# 主应用 cockpit-tools 单独保留性能档（见下方 package override）。
[profile.release]
opt-level = "z"      # 体积优先
lto = true           # 跨 crate 内联 + 裁剪未用代码
codegen-units = 1    # 更彻底的优化（编译变慢，可接受）
strip = true         # 去除符号表
panic = "abort"      # 去除 unwinding 代码，平台包 adapter 体积收益明显

# 主应用代码保持运行时性能，不随依赖一起降到 z
[profile.release.package.cockpit-tools]
opt-level = 2

[workspace]
members = [
    "src-tauri",
    "crates/cockpit-core",
    "crates/cockpit-cli",
    "crates/cockpit-zed-adapter",
    "crates/cockpit-kiro-adapter",
    "crates/cockpit-github-copilot-adapter",
    "crates/cockpit-windsurf-adapter",
    "crates/cockpit-cursor-adapter",
    "crates/cockpit-gemini-adapter",
    "crates/cockpit-trae-adapter",
    "crates/cockpit-qoder-adapter",
    "crates/cockpit-codebuddy-adapter",
    "crates/cockpit-codebuddy-cn-adapter",
    "crates/cockpit-workbuddy-adapter",
    "crates/cockpit-claude-adapter",
    "crates/cockpit-codex-adapter",
    "crates/cockpit-antigravity-adapter",
    "crates/cockpit-antigravity-ide-adapter",
]
resolver = "2"

[workspace.dependencies]
# Common dependencies with shared versions
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1.0"
thiserror = "2"
chrono = "0.4"
dirs = "5.0"
reqwest = { version = "0.12", features = ["json", "gzip", "brotli", "deflate", "zstd", "stream", "blocking"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
uuid = { version = "1.10", features = ["v4", "serde"] }
url = "2.5"
regex = "1"
futures = "0.3"
sysinfo = "0.33"
rusqlite = { version = "0.32", features = ["bundled"] }
tracing-subscriber = { version = "0.3", features = ["env-filter", "time"] }
tracing-appender = "0.2"
tracing-log = "0.2"
trash = "5"
tauri = { version = "2", features = ["tray-icon", "image-png"] }
mac-notification-sys = "0.6"
tauri-plugin-notification = "2"
rand = "0.8"
sha2 = "0.10"
tokio-tungstenite = { version = "0.26", features = ["rustls-tls-native-roots"] }
futures-util = "0.3"
rustls = "0.23"
rcgen = "0.13"
tokio-rustls = "0.26"
libc = "0.2"
aes = "0.8"
aes-gcm = "0.10"
cbc = "0.1"
pbkdf2 = "0.12"
sha1 = "0.10"
tiny_http = "0.12"
rsa = "0.9"
serde_urlencoded = "0.7"
zip = { version = "4.6.1", default-features = false, features = ["deflate"] }
windows = { version = "0.58", features = ["Win32_Foundation", "Win32_Security_Cryptography", "Win32_Storage_FileSystem", "Win32_System_Com", "Win32_UI_Shell"] }
embed-resource = "3.0.8"
