[package]
name = "cockpit-workbuddy-adapter"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
cockpit-core = { path = "../cockpit-core" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tiny_http = "0.12"
uuid = { workspace = true }
chrono = { workspace = true }

[build-dependencies]
embed-resource = { workspace = true }
